--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
     <div class="publication-links">
       <!-- arXiv Link modified to "Coming Soon" and points to current page. -->
       <span class="link-block">
-        <a href="#" class="external-link button is-normal is-rounded is-dark">
+        <a href="https://arxiv.org/abs/2405.17661" class="external-link button is-normal is-rounded is-dark">
           <span class="icon">
             <i class="ai ai-arxiv"></i>
           </span>
-          <span>arXiv (Coming Soon)</span>
+          <span>arXiv</span>
         </a>
       </span>
       <!-- Code Link modified to "Coming Soon" and points to current page. -->
@@ -144,7 +144,7 @@
           <span class="icon">
             <i class="fab fa-github"></i>
           </span>
-          <span>GitHub (Coming Soon)</span>
+          <span>Code (Coming Soon)</span>
         </a>
       </span>
     </div>    
@@ -252,7 +252,7 @@
 @article{fan2024refdrop,
     title={RefDrop: Controllable Consistency in Image or Video Generation via Reference Feature Guidance},
     author={Fan, Jiaojiao and Xue, Haotian and Zhang, Qinsheng and Chen, Yongxin},
-    journal={arXiv preprint arXiv:***},
+    journal={arXiv preprint arXiv:2405.17661},
     year={2024}
 }
 </pre>
